- Convert current video records' insertion tracking (text updates) to  a proper progress bar  - Add break to db_stream_event in main, which closes the connection  on the server side, which seems to stop the initial message(s) from  getting swallowed on all runs, but the first. Possibly also fixes the  issue with occasionally trying to pop from an empty progress list  (despite there being a check to make sure the list is NOT empty)

--- a/static/main.css
+++ b/static/main.css
@@ -24,4 +24,30 @@
     margin-bottom: 0.3rem;
     }
 
+#progress-bar-container {
+    width: 306px;
+    height: 26px;
+    border-radius: 2px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: Gray;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#progress-bar {
+    position: relative;
+    background-color: #00cc00;
+    width: 0%;
+    border-radius: 2px;
+    /*border-color: Black;*/
+    height: 25px;
+    transition: all 0.1s ease;
+}
+
+#progress-bar-text {
+    width: 305px;
+    text-align: center;
+}
 
