Change takeout_data var name to db, for clarity

--- a/static/main.css
+++ b/static/main.css
@@ -20,8 +20,8 @@
     }
 
 .btn {
-    margin-top: 0.3rem;
-    margin-bottom: 0.3rem;
+    margin-top: 0.3em;
+    margin-bottom: 0.3em;
     }
 
 #progress-bar-container {
