- Flesh out update_videos function

--- a/templates/index.html
+++ b/templates/index.html
@@ -261,7 +261,7 @@
                             "<br>Total records in the database: " + msgJSON.records_in_db)
                             if (msgJSON.failed_records != 0) {
                                 msgString += ("<br>Failed API requests: " + msgJSON.failed_records +
-                                "( run 'Update records...' to attempt these again 1-2 times.)")
+                                " (run this again to attempt these 1-2 more times.)")
                             }
                             if (msgJSON.dead_records != 0) {
                                 msgString += "<br>Videos with no identifying info " + msgJSON.failed_records +
