- Remove redundant if checks for sql statements  which use ON CONFLICT IGNORE  - Move conversion of timestamps to the desired format from sql  functions to convert_takeout  - Finalize update_videos, yet to be tested  - Change create table statement for videos_topics, creating unique  composite key (and everything that goes along with that)  - Rename a key for clarity (failed_records -> failed_api_requests)  - Make all SQL functions require a connection as a param instead of  some creating one on their own

--- a/templates/index.html
+++ b/templates/index.html
@@ -259,12 +259,12 @@
                             var msgString = ("Records processed: " + msgJSON.records_processed + "<br>Inserted: " +
                             msgJSON.records_inserted + "<br>Updated: " + msgJSON.records_updated +
                             "<br>Total records in the database: " + msgJSON.records_in_db)
-                            if (msgJSON.failed_records != 0) {
-                                msgString += ("<br>Failed API requests: " + msgJSON.failed_records +
+                            if (msgJSON.failed_api_requestss != 0) {
+                                msgString += ("<br>Failed API requests: " + msgJSON.failed_api_requestss +
                                 " (run this again to attempt these 1-2 more times.)")
                             }
                             if (msgJSON.dead_records != 0) {
-                                msgString += "<br>Videos with no identifying info " + msgJSON.failed_records +
+                                msgString += "<br>Videos with no identifying info " + msgJSON.dead_records +
                                 " (added as unknown)"
                             }
                             progressMsg.innerHTML = msgString;
