- Add back if checks for inserting especially numerous records, like timestamps and tags, as that seems to improve speed by about 10-20% (can't be more exact because of the following change). Remove ON CONFLICT IGNORE clauses from those insert statements
 - Remove types declaration for the SQL connection as it seems
unnecessary right now

 - In addition to already existing client side measures (submit button
greyed out for the duration of the below mentioned process) for
preventing a submission for records' processing while one is already
in progress, add server side measures as well

--- a/static/main.css
+++ b/static/main.css
@@ -34,7 +34,7 @@
     text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
-}
+    }
 
 #progress-bar {
     position: relative;
@@ -44,10 +44,14 @@
     /*border-color: Black;*/
     height: 25px;
     transition: all 0.1s ease;
-}
+    }
 
 #progress-bar-text {
     width: 305px;
     text-align: center;
-}
+    }
 
+
+#wait-for-db {
+    color: red;
+    }
